# lending-club

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db
.viz/: stats.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
conf/base/: catalog.yml  parameters_analysis.yml  parameters_data_clean.yml  parameters_encode.yml  parameters_feature.yml  parameters_feature_eng.yml  parameters_model.yml  parameters_model_features.yml  parameters_outliers.yml  parameters_split_dataset.yml
notebooks/: 1_EDA_workflow.ipynb  2_Model_workflow.ipynb  3_Report.ipynb  exploration.ipynb  workflow.ipynb
src/lending_club/: __init__.py  __main__.py  settings.py
src/lending_club/pipelines/analysis/: __init__.py  nodes.py  pipeline.py
src/lending_club/pipelines/data_clean/: __init__.py  nodes.py  pipeline.py
src/lending_club/pipelines/data_processing/: nodes.py  pipeline.py
src/lending_club/pipelines/encode/: __init__.py  nodes.py  pipeline.py
src/lending_club/pipelines/feature_eng/: __init__.py  nodes.py  pipeline.py
src/lending_club/pipelines/features/: nodes.py  pipeline.py
src/lending_club/pipelines/model/: nodes.py  pipeline.py
tests/pipelines/analysis/: test_pipeline.py
tests/pipelines/data_clean/: test_pipeline.py
tests/pipelines/encode/: test_pipeline.py
tests/pipelines/feature_eng/: test_pipeline.py
tests/pipelines/outliers/: test_pipeline.py
tests/pipelines/split_dataset/: test_pipeline.py
(+6 files in other folders)
