[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "lending_club"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
lending-club = "lending_club.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "lending_club"
project_name = "lending_club"
kedro_init_version = "0.19.9"
tools = [ "Linting", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "lending_club.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "34716a916aeb48b78cce40d2b3fe7d7d"
